# metakmean

./: CMakeLists.txt  README.md  basic.h  float.h  kmean.h  list.h  main.cpp
include/: dynamic_array.hpp  math.hpp  point.hpp  types.hpp  utility.hpp
test/: dynamic_array_test.cpp  k_means.cpp
